--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Renee's Psychic Game</title>
-  <script src ="assets/javascript/game.js"</script>
+  <title>Psychic Game</title>
+  <script src ="assets/javascript/game.js"></script>
 </head>
 
 <body>
-
-  <div id="game">
-    <p>"Guess What Letter I am Thinking Of</p>
-  </div>
-
+<h1>"Guess that Letter!"</h1>
+<p>What letter am I thinking of?  Press guess to start playing!</p>
+<input id="guess" type="text">
+<input type="button" value="guess" onClick="guessOne()"/>
+<p id="message">&nbsp;</p>
  
 </body>
 
