--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
+
 <h1>"Guess that Letter!"</h1>
-<p>What letter am I thinking of?  Press guess to start playing!</p>
-<input id="guess" type="text">
-<input type="button" value="guess" onClick="guessOne()"/>
-<p id="message">&nbsp;</p>
- 
+
+<div id="game">
+	<p>What letter am I thinking of? Press a letter to start playing</p>
+</div>
+
 </body>
 
+<p id="message"</p>
 </html>
